---
source: tests/walker.rs
expression: walker.inputs
info:
  flake_nix: ""
  changes: []
---
flake-utils:
  id: flake-utils
  flake: true
  url: "\"github:numtide/flake-utils/master\""
  follows: []
  range:
    start: 115
    end: 126
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:NixOS/nixpkgs/nixos-unstable\""
  follows: []
  range:
    start: 53
    end: 60
poetry2nix:
  id: poetry2nix
  flake: true
  url: "\"github:nix-community/poetry2nix/master\""
  follows:
    - Indirect:
        - flake-utils
        - "\"flake-utils\""
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
  range:
    start: 0
    end: 0
